--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -117,95 +117,120 @@
             <hr />
 
             <!-- list of assignments -->
-            <ul class="list-group wd-modules">
-              <li class="list-group-item">
-                <div>
-                  <i class="fa fa-ellipsis-v"></i> Assignment
-                  <span class="float-end">
-                    <span class="rounded bg-secondary text-light p-1">
-                      40% of Total
-                    </span>
-                    <i class="fa fa-plus ms-2"></i>
-                    <i class="fa fa-ellipsis-v ms-2"></i>
-                  </span>
-                </div>
-                <!-- a module -->
-                <ul class="list-group">
-                  <!-- an item in the nested list  -->
-                  <li class="list-group-item">
-                    <i class="fa fa-ellipsis-v"></i>
-                    <a
-                      href="/Kanbas/Courses/Assignments/Edit/screen.html?assignment=A1"
-                      >A1 SETUP</a
-                    >
-                    <span class="float-end">
-                      <i class="fa fa-check-circle text-success"></i>
-                      <i class="fa fa-ellipsis-v ms-2"></i>
-                    </span>
-                  </li>
-                  <!-- an item in the nested list  -->
-                  <li class="list-group-item">
+            <div class="card wd-modules">
+              <div class="card-header">
+                <i class="fa fa-ellipsis-v"></i> Assignment<span
+                  class="float-end"
+                >
+                  <span class="rounded-pill px-3 py-1"> 40% of Total </span>
+                  <i class="fa fa-plus"></i>
+                  <i class="fa fa-ellipsis-v"></i>
+                </span>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <div class="d-flex">
                     <i class="fa fa-ellipsis-v"></i>
                     <i class="fa fa-book"></i>
-                    <a
-                      href="/Kanbas/Courses/Assignments/Edit/screen.html?assignment=A2"
-                      >A2 HTML</a
-                    >
+                    <div class="flex-fill">
+                      <a
+                        href="/Kanbas/Courses/Assignments/Edit/screen.html?assignment=A2"
+                        >A1 SETUP</a
+                      >
+                      <div class="text-muted small">
+                        Week x - Content - Week Starting on Monday mm/dd/yyyy |
+                        Due mm dd, yyyy at 11:59 pm | 100 pts
+                      </div>
+                    </div>
+
                     <span class="float-end">
                       <i class="fa fa-check-circle text-success"></i>
-                      <i class="fa fa-ellipsis-v ms-2"></i>
+                      <i class="fa fa-ellipsis-v"></i>
                     </span>
-                    <div>subtext</div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                  </div>
+                </li>
+                <!-- an item in the nested list  -->
+                <li class="list-group-item">
+                  <div class="d-flex">
+                    <i class="fa fa-ellipsis-v"></i>
+                    <i class="fa fa-book"></i>
+                    <div class="flex-fill">
+                      <a
+                        href="/Kanbas/Courses/Assignments/Edit/screen.html?assignment=A2"
+                        >A2 HTML</a
+                      >
+                      <div class="text-muted small">
+                        Week x - Content - Week Starting on Monday mm/dd/yyyy |
+                        Due mm dd, yyyy at 11:59 pm | 100 pts
+                      </div>
+                    </div>
+
+                    <span class="float-end">
+                      <i class="fa fa-check-circle text-success"></i>
+                      <i class="fa fa-ellipsis-v"></i>
+                    </span>
+                  </div>
+                </li>
+              </ul>
+            </div>
             <!-- end of assignments -->
 
             <!-- list of Quizes -->
-            <ul class="list-group wd-modules">
-              <li class="list-group-item">
-                <div>
-                  <i class="fa fa-ellipsis-v"></i> Quizes
-                  <span class="float-end">
-                    <span class="rounded bg-secondary text-light p-1">
-                      20% of Total
-                    </span>
-                    <i class="fa fa-plus ms-2"></i>
-                    <i class="fa fa-ellipsis-v ms-2"></i>
-                  </span>
-                </div>
-                <!-- a module -->
-                <ul class="list-group">
-                  <!-- an item in the nested list  -->
-                  <li class="list-group-item">
-                    <i class="fa fa-ellipsis-v"></i>
-                    <a
-                      href="/Kanbas/Courses/Assignments/Edit/screen.html?quiz=Q1"
-                      >Q1</a
-                    >
-                    <span class="float-end">
-                      <i class="fa fa-check-circle text-success"></i>
-                      <i class="fa fa-ellipsis-v ms-2"></i>
-                    </span>
-                  </li>
-                  <!-- an item in the nested list  -->
-                  <li class="list-group-item">
+            <div class="card wd-modules">
+              <div class="card-header">
+                <i class="fa fa-ellipsis-v"></i> Quizes<span class="float-end">
+                  <span class="rounded-pill px-3 py-1"> 20% of Total </span>
+                  <i class="fa fa-plus"></i>
+                  <i class="fa fa-ellipsis-v"></i>
+                </span>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <div class="d-flex">
                     <i class="fa fa-ellipsis-v"></i>
                     <i class="fa fa-book"></i>
-                    <a
-                      href="/Kanbas/Courses/Assignments/Edit/screen.html?quiz=Q2"
-                      >Q2</a
-                    >
+                    <div class="flex-fill">
+                      <a
+                        href="/Kanbas/Courses/Assignments/Edit/screen.html?quiz=Q1"
+                        >Q1</a
+                      >
+                      <div class="text-muted small">
+                        Week x - Content - Week Starting on Monday mm/dd/yyyy |
+                        Due mm dd, yyyy at 11:59 pm | 100 pts
+                      </div>
+                    </div>
+
                     <span class="float-end">
                       <i class="fa fa-check-circle text-success"></i>
-                      <i class="fa fa-ellipsis-v ms-2"></i>
+                      <i class="fa fa-ellipsis-v"></i>
                     </span>
-                    <div>subtext</div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+                  </div>
+                </li>
+                <!-- an item in the nested list  -->
+                <li class="list-group-item">
+                  <div class="d-flex">
+                    <i class="fa fa-ellipsis-v"></i>
+                    <i class="fa fa-book"></i>
+                    <div class="flex-fill">
+                      <a
+                        href="/Kanbas/Courses/Assignments/Edit/screen.html?quiz=Q2"
+                        >Q2</a
+                      >
+                      <div class="text-muted small">
+                        Week x - Content - Week Starting on Monday mm/dd/yyyy |
+                        Due mm dd, yyyy at 11:59 pm | 100 pts
+                      </div>
+                    </div>
+
+                    <span class="float-end">
+                      <i class="fa fa-check-circle text-success"></i>
+                      <i class="fa fa-ellipsis-v"></i>
+                    </span>
+                  </div>
+                </li>
+              </ul>
+            </div>
+
             <!-- end of Quizes -->
           </div>
         </div>
