--- a/public/Kanbas/Navigation/index.html
+++ b/public/Kanbas/Navigation/index.html
@@ -9,23 +9,22 @@
       <li><a href="http://northeastern.edu">N</a></li>
       <li>
         <a href="/Kanbas/Account/Profile/screen.html">
-          <!-- <i class="fa fa-user" id="wd-account-icon"></i> -->
           <i class="fa fa-user" id="wd-account-icon"></i>
           Account</a
         >
       </li>
-      <li class="wd-active">
+      <li>
         <a href="/Kanbas/Dashboard/screen.html">
-          <i class="fa fa-tachometer"></i> Dashboard</a
+          <i class="fas fa-tachometer-alt"></i> Dashboard</a
         >
       </li>
-      <li>
+      <li class="wd-active">
         <a href="/Kanbas/Courses/Home/screen.html"
           ><i class="fa fa-book"></i>Courses</a
         >
       </li>
       <li>
-        <a href="#"><i class="fa fa-calendar"></i> Calendar</a>
+        <a href="#"><i class="far fa-calendar-alt"></i> Calendar</a>
       </li>
       <li>
         <a href="#"
@@ -34,16 +33,19 @@
         >
       </li>
       <li>
-        <a href="#"><i class="fa fa-clock-o"></i>History</a>
+        <a href="#"><i class="far fa-clock"></i>History</a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-laptop"></i>Studio</a>
+        <a href="#"><i class="fa fa-laptop"></i> Studio</a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-sign-out"></i>Commons</a>
+        <a href="#"><i class="fas fa-sign-out-alt"></i> Commons</a>
       </li>
       <li>
-        <a href="#"><i class="fa fa-question-circle"></i><br />Help</a>
+        <a href="#"
+          ><i class="fa fa-question-circle"></i><br />
+          Help</a
+        >
       </li>
     </ul>
   </body>
