--- a/public/Kanbas/Courses/Assignments/Edit/screen.html
+++ b/public/Kanbas/Courses/Assignments/Edit/screen.html
@@ -1,129 +1,296 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/libs/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="/Kanbas/styles.css" />
     <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
     <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
-    <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" />
+    <!-- <link rel="stylesheet" href="/Kanbas/Courses/Modules/index.css" /> -->
     <link rel="stylesheet" href="/Kanbas/Courses/Assignments/index.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Grades/index.css" />
   </head>
   <body>
-    <!-- refactor using flex  -->
-    <div class="d-flex">
-      <!-- Left: Kanbas Navigation -->
-      <div class="d-none d-md-block">
-        <!-- Col 1: Kanbas Navigation Here -->
-        <ul class="wd-kanbas-navigation">
-          <li><a href="http://northeastern.edu">N</a></li>
-          <li>
-            <a href="/Kanbas/Account/Profile/screen.html">
-              <i class="fa fa-user" id="wd-account-icon"></i>
-              Account</a
-            >
-          </li>
-          <li>
-            <a href="/Kanbas/Dashboard/screen.html">
-              <i class="fa fa-tachometer"></i> Dashboard</a
-            >
-          </li>
-          <li class="wd-active">
-            <a href="/Kanbas/Courses/Home/screen.html"
-              ><i class="fa fa-book"></i>Courses</a
-            >
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-calendar"></i> Calendar</a>
-          </li>
-          <li>
-            <a href="#"
-              ><i class="fa fa-inbox"></i><br />
-              Inbox</a
-            >
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-clock-o"></i>History</a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-laptop"></i> Studio</a>
-          </li>
-          <li>
-            <a href="#"><i class="fa fa-sign-out"></i> Commons</a>
-          </li>
-          <li>
-            <a href="#"
-              ><i class="fa fa-question-circle"></i><br />
-              Help</a
-            >
-          </li>
-        </ul>
-      </div>
-
-      <!-- Right: Assignment Page -->
-      <div class="flex-fill container-fluid">
-        <!-- Top: Breadcrumb  -->
-        <nav class="flex-fill container-fluid mt-4" aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="/Kanbas/Courses/Home/screen.html">CS5610.11744.202310</a>
+    <!-- Refactored using Bootstrap grid system -->
+    <div>
+      <div class="d-flex">
+        <!-- Left: Kanbas Navigation -->
+        <div class="d-none d-md-block">
+          <ul class="wd-kanbas-navigation">
+            <li><a href="http://northeastern.edu">N</a></li>
+            <li>
+              <a href="/Kanbas/Account/Profile/screen.html">
+                <i class="fa fa-user" id="wd-account-icon"></i>
+                Account</a
+              >
             </li>
-            <li class="breadcrumb-item">
-              <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+            <li>
+              <a href="/Kanbas/Dashboard/screen.html">
+                <i class="fas fa-tachometer-alt"></i> Dashboard</a
+              >
             </li>
-            <li class="breadcrumb-item active" aria-current="page">
-              A1: ENV + HTML
+            <li class="wd-active">
+              <a href="/Kanbas/Courses/Home/screen.html"
+                ><i class="fa fa-book"></i>Courses</a
+              >
             </li>
-          </ol>
-        </nav>
+            <li>
+              <a href="#"><i class="far fa-calendar-alt"></i> Calendar</a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fa fa-inbox"></i><br />
+                Inbox</a
+              >
+            </li>
+            <li>
+              <a href="#"><i class="far fa-clock"></i>History</a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-laptop"></i> Studio</a>
+            </li>
+            <li>
+              <a href="#"><i class="fas fa-sign-out-alt"></i> Commons</a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fa fa-question-circle"></i><br />
+                Help</a
+              >
+            </li>
+          </ul>
+        </div>
 
-        <hr />
-
-        <!-- Bottom 2 Cols: Course Navigation + Assignment Edit -->
-        <div class="d-flex">
-          <!-- Col 1: Nav  -->
-          <div class="d-none d-xl-block">
-            <ul class="wd-navigation">
-              <li>
-                <a href="/Kanbas/Courses/Home/screen.html">Home</a>
+        <!-- Right: Course Nav + Component -->
+        <div class="flex-fill container-fluid">
+          <!-- Top: Breadcrumb -->
+          <nav class="flex-fill container-fluid mt-4" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="/Kanbas/Courses/Home/screen.html"
+                  >CS5610.11744.202310</a
+                >
               </li>
-              <li>
-                <a href="/Kanbas/Courses/Modules/screen.html">Modules</a>
-              </li>
-              <li><a href="http://piazza.com">Piazza</a></li>
-              <li><a href="#">Zoom</a></li>
-              <li class="wd-active">
+              <li class="breadcrumb-item">
                 <a href="/Kanbas/Courses/Assignments/screen.html"
                   >Assignments</a
                 >
               </li>
-              <li><a href="#">Quizzes</a></li>
-              <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
-              <li><a href="#">People</a></li>
-            </ul>
-          </div>
+              <li class="breadcrumb-item active" aria-current="page">
+                A1: ENV + HTML
+              </li>
+            </ol>
+          </nav>
 
-          <!-- Col 2: Assignments Edit -->
-          <div class="flex-fill">
-            <!-- search bar and buttons on the top of this column -->
-            <div class="d-flex">
-              <div class="flex-fill">
-                <!-- empty placeholder -->
-              </div>
-              <span class="float-end"
-                ><button class="btn btn-light me-2">
-                  <i class="fa fa-check-circle text-success"></i
-                  >Published</button
-                ><button class="btn btn-light">
-                  <i class="fa fa-ellipsis-v ms-2"></i></button
-              ></span>
+          <hr />
+
+          <!-- Bottom 2 Cols -->
+          <div class="d-flex">
+            <!-- Col 1: Course Nav -->
+            <div class="d-none d-xl-block">
+              <ul class="wd-navigation">
+                <li>
+                  <a href="/Kanbas/Courses/Home/screen.html">Home</a>
+                </li>
+                <li>
+                  <a href="/Kanbas/Courses/Modules/screen.html">Modules</a>
+                </li>
+                <li><a href="http://piazza.com">Piazza</a></li>
+                <li><a href="#">Zoom</a></li>
+                <li class="wd-active">
+                  <a href="/Kanbas/Courses/Assignments/screen.html"
+                    >Assignments</a
+                  >
+                </li>
+                <li><a href="#">Quizzes</a></li>
+                <li>
+                  <a href="/Kanbas/Courses/Grades/screen.html">Grades</a>
+                </li>
+                <li><a href="#">People</a></li>
+              </ul>
             </div>
-            <hr />
 
-            <!-- edit assignment -->
+            <!-- Col 2: Component Content -->
+            <div class="flex-fill container-fluid ms-4">
+              <!-- row 1: buttons -->
+              <div class="d-flex">
+                <div>
+                  <!-- empty placeholder -->
+                </div>
+                <div class="flex-fill">
+                  <span class="float-end"
+                    ><button class="btn btn-light me-2">
+                      <i class="fa fa-check-circle text-success me-2"></i
+                      >Published</button
+                    ><button class="btn btn-light">
+                      <i class="fa fa-ellipsis-v ms-2"></i></button
+                  ></span>
+                </div>
+              </div>
 
-            <!-- end of edit -->
+              <hr />
+
+              <!-- row 2: Text Input -->
+              <div class="flex-fill">
+                <!-- Input text fields -->
+                <label for="wd-assignment-name">Assignment Name<br /></label>
+                <input
+                  class="form-control mt-1"
+                  value="A1"
+                  id="wd-assignment-name"
+                /><br />
+                <textarea class="form-control">
+This assignment blah blah ... </textarea
+                ><br />
+              </div>
+
+              <!-- row 3: Actual Content -->
+              <div class="mt-4 container">
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label wd-edit-label">Points</div>
+                  <div class="col-9">
+                    <input
+                      class="form-control"
+                      type="number"
+                      value="100"
+                      min="0"
+                      max="100"
+                    /><br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label">Assignment Group</div>
+                  <div class="col-9">
+                    <select class="form-select" id="assignment-group">
+                      <option value="Assignment">Assignment</option>
+                      <option value="Quiz">Quiz</option>
+                      <option value="Exam">Exam</option>
+                      <option value="Project">Project</option></select
+                    ><br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label">Display Grade as</div>
+                  <div class="col-9">
+                    <select class="form-select" id="grade-display-as">
+                      <option value="Percentage">Percentage</option></select
+                    ><br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label">Submission Type</div>
+                  <div class="col-9">
+                    <select class="form-select" id="assignment-submission-type">
+                      <option value="Online">Online</option>
+                      <option value="External Tool">
+                        External Tool
+                      </option></select
+                    ><br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label">Online Entry Options</div>
+                  <div class="col-9">
+                    <input
+                      type="checkbox"
+                      name="wd-entry-options"
+                      id="wd-text-entry"
+                    />
+                    <label for="wd-text-entry">Text Entry</label><br />
+                    <input
+                      type="checkbox"
+                      name="wd-entry-options"
+                      id="wd-website-url"
+                    />
+                    <label for="wd-website-url">Website URL</label><br />
+                    <input
+                      type="checkbox"
+                      name="wd-entry-options"
+                      id="wd-media-recordings"
+                    />
+                    <label for="wd-media-recordings">Media Recordings</label
+                    ><br />
+                    <input
+                      type="checkbox"
+                      name="wd-entry-options"
+                      id="wd-student-annotations"
+                    />
+                    <label for="wd-student-annotations"
+                      >Student Annotations</label
+                    ><br />
+                    <input
+                      type="checkbox"
+                      name="wd-entry-options"
+                      id="wd-file-uploads"
+                    />
+                    <label for="wd-file-uploads">File Uploads</label
+                    ><br /><br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+                <!-- a row -->
+                <div class="row">
+                  <div class="col-3 wd-edit-label">Assign</div>
+                  <div class="col-9">
+                    <div class="border rounded p-3">
+                      Due<br />
+                      <input
+                        class="form-control"
+                        name="wd-due-date"
+                        type="date"
+                        value="2021-01-01"
+                      /><br />
+                      Available From<br />
+                      <input
+                        class="form-control"
+                        name="wd-available-from"
+                        type="date"
+                        value="2021-01-01"
+                      /><br />
+                      Until<br />
+                      <input
+                        class="form-control"
+                        name="wd-available-until"
+                        type="date"
+                        value="2021-01-01"
+                      /><br />
+                    </div>
+                    <br />
+                  </div>
+                </div>
+                <!-- end of a row -->
+              </div>
+
+              <hr />
+              <!-- row 4: buttons -->
+              <div class="d-flex justify-content-end">
+                <a href="/Kanbas/Courses/Assignments/screen.html"
+                  ><button class="btn btn-light me-3">Cancel</button></a
+                >
+                <button class="btn btn-danger">Save</button>
+              </div>
+              <!-- end of buttons -->
+              <hr />
+            </div>
           </div>
+          <!-- End of Col 2: Component Content  -->
         </div>
+        <!-- End of Right: Course Nav + Component -->
       </div>
     </div>
   </body>
