--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -17,11 +17,10 @@
         <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
       </li>
       <li><a href="#">Quizzes</a></li>
-      <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+      <li>
+        <a href="/Kanbas/Courses/Grades/screen.html">Grades</a>
+      </li>
       <li><a href="#">People</a></li>
-      <!-- <li>
-        <a href="/Kanbas/Courses/Settings/Details/screen.html"> Settings</a>
-      </li> -->
     </ul>
   </body>
 </html>
